# CitationFixerTool

./: .gitignore  CMakeLists.txt
assets/: my_test.docx
ext/DuckX-1.2.2/src/: duckx.cpp  duckx.hpp
src/: citation.h  main.cpp  utils.h
